--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: extended_wrap
 description: Extended official wrap to build special wrap like limiting row number
-version: 0.0.3
+version: 0.0.4
 homepage: https://github.com/elileo1/extended_wrap
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
